fix(color-select-panel): z-index (#560)

--- a/packages/theme/src/color-select-panel/index.less
+++ b/packages/theme/src/color-select-panel/index.less
@@ -8,7 +8,7 @@
     flex-direction: column;
     position: absolute;
     max-width: 300px;
-    z-index: var(--ti-color-select-panel__select__wrapper-zindex);
+    z-index: var(--ti-color-select-panel__wrapper-zindex);
     background: var(--ti-color-select-panel__wrapper-bg);
     gap: var(--ti-color-select-panel-spacing);
     padding: var(--ti-color-select-panel-spacing-2x);
